# BIPackage

./: .gitignore  README.md  cleaner.py  pyproject.toml
bipackage/: autocomplete.py  constants.py
bipackage/cli/: _entry.py
bipackage/pipelines/germline/: gatk_gcnv_json.py
bipackage/src/: __init__.py
bipackage/src/bamtools/: __init__.py  bam_counts.py  compile_bam_stats.py
bipackage/src/bedtools/: bedfilegenerator.py
bipackage/src/fastqtools/: __init__.py  downsample.py  fastq_read_counter.py  fastqvalidate.py  merge_it.py  undetermined_demultiplexer.py
bipackage/src/ittools/: ismount.py  md5sumchecher_multi.py  truncatedfchecker_single.py
bipackage/src/nipttools/: __init__.py  nipt_bcl2fastq.py
bipackage/src/pipelines/aligners/: bwa_dedup_sp_qc_mosdepth.py  readme.md
bipackage/src/pipelines/germline/: gatk_gcnv_json.py
bipackage/src/pipelines/somatic/: cnv.py  pon.py  snv-indel.py
bipackage/util/: utilities.py
src/BIT/bamtools/: compile_bam_stats.py
src/BIT/bedtools/: bedfilegenerator.py
src/BIT/fastqtools/: downsample.py  fastq_read_counter.py  fastqvalidate.py  merge_it.py  undetermined_demultiplexer.py
src/BIT/ittools/: ismount.py  md5sumchecher_multi.py  truncatedfchecker_single.py
src/BIT/nipttools/: nipt_bcl2fastq.py
