[project]
name = "bipackage"
version = "0.1.0"
description = "Bioinformatics tools package"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry.scripts]
fx = "framex.cli._entry:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
